--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="navbar-top-left">
-            <img src="assets/logo Dumbwaysid.png" alt="logo Dumbways.id">
+            <img src="https://dumbways.id/assets/images/brandred.png" alt="logo Dumbways.id">
             <ul>
                 <li>
                     <a href="index.html" title="Menuju ke halaman utama"><b>Home</b></a>
